minor fix: contacts page imges, missed rooms, text-align

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -63,6 +63,7 @@
                 margin: 5px auto
         h4
             margin: 10px auto
+            text-align: center!important
         .grp
             text-align: center
     .hostels-btn-wrapper
@@ -75,6 +76,7 @@
     .adresses-wrapper
         br
             display: none
+    
 // ≥576px
 +media-breakpoint-down(xs)
     .btn-order
