--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -576,6 +576,9 @@ footer
 .contacts-screen
     p, span
         color: #000
+.hostel-adress__contact
+    img
+        margin-right: 15px
 .hostel-tabs-wpapper
     margin: 30px 0
 .hostel-tabs
